src/objects/BT_CO_DIR_VendorPerformanceMaster__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complain_Count_Delivery__c</fullName>
        <label>Complain Count Delivery</label>
        <summaryFilterItems>
            <field>BT_CO_DIR_VendorPerformance__c.Classification__c</field>
            <operation>equals</operation>
            <value>Delivery Related</value>
        </summaryFilterItems>
        <summaryForeignKey>BT_CO_DIR_VendorPerformance__c.BT_CO_DIR_VendorPerformanceMaster__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Complaint_Count_NonDelivery__c</fullName>
        <label>Complaint Count NonDelivery</label>
        <summaryFilterItems>
            <field>BT_CO_DIR_VendorPerformance__c.Classification__c</field>
            <operation>equals</operation>
            <value>Not Delivery Related</value>
        </summaryFilterItems>
        <summaryForeignKey>BT_CO_DIR_VendorPerformance__c.BT_CO_DIR_VendorPerformanceMaster__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <label>Vendor Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Group__c</fullName>
        <label>Vendor Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_DIR_VendorPerformanceMaster</label>
    <nameField>
        <label>BT_CO_VendorPerformanceMaster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_DIR_VendorPerformanceMasters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>